tests/files/lexer_tests/should_fail/026.cmdr
// Illegal character in string (ascii 26)
var = ''